# parser

./: Cargo.toml  README.md
.github/workflows/: ci.yml
Notes/: RustCommands.txt  Вопросы.txt
aux/: output.csv  output.txt  records_example_wrong_line.csv
aux/for_comparator/: 49_records.txt
bank-system/aux/: balance.csv
bank-system/examples/: cli.rs  enums_example_2.rs
bank-system/src/: lib.rs  storage.rs  transaction.rs
examples/: simple_use.rs
practice/module_1/parser/aux/: output.csv
practice/module_2/quotes-streaming/: Cargo.toml  README.md
src/: bin_format.rs  csv_format.rs  error.rs  lib.rs  main.rs  report.rs  text_format.rs  transaction.rs
theory/Notes/: RustCommands.txt  RustInstallation.txt
theory/module_3/topic_3/lesson_1_intro/actix-backend-practice/: .env  Cargo.toml  project_structure.txt
theory/module_3/topic_3/lesson_1_intro/actix-backend-practice/src/: main.rs
theory/module_3/topic_3/lesson_1_intro/actix-backend-practice/src/data/: mod.rs  users_repo.rs
theory/module_3/topic_3/lesson_1_intro/actix-backend-practice/src/domain/: mod.rs
theory/module_3/topic_3/lesson_1_intro/actix-backend-practice/src/infrastructure/: config.rs  migrate.rs  mod.rs  security.rs
theory/module_3/topic_3/lesson_1_intro/actix-backend-practice/src/presentation/: mod.rs  routes.rs
udp-room-monitoring/: Cargo.toml
udp-room-monitoring/examples/: receiver_simulator.rs
udp-room-monitoring/src/: lib.rs  metrics.rs  receiver.rs  sender.rs
yandex_course/src/: main.rs
yandex_course/src/basics/: borrowing.rs  conditionals.rs  config.rs  mod.rs
(+23 files in other folders)
