[package]
name = "parser"
version = "0.1.0"
edition = "2024"
# Дефолтный исполняемый файл для cargo run
default-run = "converter"

# Секция генерируемых бинарников, создаём несколько
[[bin]]
name = "converter"
path = "src/main.rs"

[[bin]]
name = "comparator"
path = "src/bin/comparator.rs"

[lib]
name = "parser"
path = "src/lib.rs"

[dependencies]
# Для переводов в сетевой порядок байтов и обратно
byteorder = "1.5.0"
# Для работы с командной строкой (тяжеловат, можно рассмотреть альтернативы)
# Надо включить features дополнительно
clap = { version = "4.6.0", features = ["derive"] }
