[package]
name = "actix-backend-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }

argon2 = "0.5"
password-hash = "0.5"
jsonwebtoken = "8"
anyhow = "1"
thiserror = "1"
env_logger = "0.11" 